# zephyr-blinky

./: .gitignore  CMakeLists.txt  README  README.md  prj.conf
boards/: nrf52840dk_nrf52840.overlay  nucleo_u575zi_q.overlay  rpi_pico.overlay
scripts/: build.sh  build_nordic.sh  build_rpi_pico.sh  build_stm.sh  update_git_branch_on_file.sh  update_git_hash_on_file.sh
src/: main.c  main.cpp
src/bsp/: dt_instances.cpp  dt_instances.h  instances.cpp  instances.h  led_dt_defines.h
src/common/: ansi_colors.h  print.cpp  print.h
src/led/: led.cpp  led.h
src/task/: led_app.cpp  led_app.h  led_array.cpp  led_array.h
